# daneel

./: .gitignore  README.md  chat_template_qwen.jinja  cli.py  dataset.py  device.py  inference.py  model.py  pyproject.toml  requirements.txt  training.py  training_set.jsonl  validation.py  validation_set.jsonl
test/: test_dataset.py  test_model.py
